--- a/mmp-fe/src/App.css
+++ b/mmp-fe/src/App.css
@@ -7,6 +7,28 @@ td {
   padding: 10px;
 }
 
+#project-info-container {
+  float: left;
+}
+
 #table-container {
-  padding-left: 27%;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#modal-container {
+  float: right;
+  text-align: center;
+}
+
+#title {
+  text-align: center;
+}
+
+#container-master {
+  display: flex;
 }
