MintModal e MintButton graphic improvements

--- a/mmp-fe/src/App.css
+++ b/mmp-fe/src/App.css
@@ -66,3 +66,8 @@ button {
   height: 100%;
   border: solid 3px #202020;
 }
+
+/* mint-button.tsx */
+.mint-button-container {
+  text-align: center;
+}
