--- a/mmp-fe/src/App.css
+++ b/mmp-fe/src/App.css
@@ -71,3 +71,26 @@ button {
 .mint-button-container {
   text-align: center;
 }
+
+/* loading-spinner.tsx */
+.loading-spinner-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+  }
+  
+  .loading-spinner-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: white;
+	padding: 20px;
+	border-radius: 4px;
+  }
