--- a/mmp-fe/src/App.css
+++ b/mmp-fe/src/App.css
@@ -20,7 +20,7 @@ button {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
 }
