Gestione loader in editModal

--- a/mmp-fe/src/App.css
+++ b/mmp-fe/src/App.css
@@ -80,8 +80,10 @@ button {
   margin: 0 auto;
 }
 
-#messageContainer {
+.messageContainer {
   text-align: center;
+  padding: 10px;
+  color: green;
 }
 
 /* loading-spinner.tsx */
